# rust_postgres_test

./: .env  Cargo.toml  Makefile  README.md  compose.yaml
postgres/init/: 01_setup.sql
src/: main.rs
