[package]
name = "rust_postgres_test"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1", features = ["serde", "v4"] }
chrono = "0.4"
tokio = { version = "1.44.2", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = [
    "with-uuid-1",
    "with-chrono-0_4",
] }
